--- a/Python_Notes.ipynb
+++ b/Python_Notes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOohQnNWfFgDYO7Hi3DbJdp",
+      "authorship_tag": "ABX9TyNmjl/ZwEo4FuhRcsOwLl1y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -421,37 +421,93 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "a = ['a','b','c']\n",
-        "a.extend([[4,5],[5,6],[7,8]])\n",
-        "print(a)\n"
+        "#**Advance Data Types**\n",
+        "* Lists\n",
+        "* Sets\n",
+        "* Tuple\n",
+        "* Dictionary\n",
+        "\n",
+        "Advance data types can have a collection of Primitive Data types as well as Advance data types.\n",
+        "\n",
+        "#**1. Lists**\n",
+        "\n",
+        "* Collection of different datatypes i.e. basic and advance\n",
+        "* It has sequence of items\n",
+        "* Lists are mutable \n",
+        "* Lists are defined in [] square brackets\n",
+        "* Ex. my_list = [1,2,a,b,2.5,[5,4],True]\n",
+        "\n",
+        "#**Basic List Functions**\n",
+        "\n",
+        "* len() : Gives length of the list.\n",
+        "* type() : Gives the type of the list\n",
+        "* min() : Give minimum Value for the list of similar kind\n",
+        "* max() : Give Maximum Value for the list of similar kind\n",
+        "* print() : Print function\n",
+        "* sorted() : Sorts list in ascending or decending order"
       ],
       "metadata": {
+        "id": "jc7faqI4mqBI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# List Functions\n",
+        "my_list1 = ['a','b','c','d','e',1,2,3,4,5,[1.2,2.5]]\n",
+        "print('list:',my_list1)\n",
+        "\n",
+        "print('Length of List:',len(my_list1))\n",
+        "print('Type:',type(my_list1))\n",
+        "print('Item Type: ',type(my_list1[4]))\n",
+        "print('Item Type: ',type(my_list1[10]))\n",
+        "print('Item Type: ',type(my_list1[10][1]))\n",
+        "\n",
+        "my_list2=[10,45,12,74,45,36,15]\n",
+        "print('List2:',my_list2)\n",
+        "\n",
+        "print('Min:',min(my_list2))\n",
+        "print('Max:',max(my_list2))\n",
+        "print('Sorted ascending:',sorted(my_list2))\n",
+        "print('Sorted Decending:',sorted(my_list2,reverse=True))\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "nLZjGdVdoQ_3",
+        "outputId": "15a69dc9-3e01-4f86-a496-e297b3339e07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "WDa44rLQxLdh",
-        "outputId": "12740bb1-0c76-433c-b94b-0dd103c9e66a"
+        }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['a', 'b', 'c', [4, 5], [5, 6], [7, 8]]\n"
+            "list: ['a', 'b', 'c', 'd', 'e', 1, 2, 3, 4, 5, [1.2, 2.5]]\n",
+            "Length of List: 11\n",
+            "Type: <class 'list'>\n",
+            "Item Type:  <class 'str'>\n",
+            "Item Type:  <class 'list'>\n",
+            "Item Type:  <class 'float'>\n",
+            "List2: [10, 45, 12, 74, 45, 36, 15]\n",
+            "Min: 10\n",
+            "Max: 74\n",
+            "Sorted ascending: [10, 12, 15, 36, 45, 45, 74]\n",
+            "Sorted Decending: [74, 45, 45, 36, 15, 12, 10]\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "l 1"
-      ],
+      "source": [],
       "metadata": {
-        "id": "UkYBbklexoo5"
+        "id": "81nYrm_bpfoz"
       },
       "execution_count": null,
       "outputs": []
