--- a/Python_Notes.ipynb
+++ b/Python_Notes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmjl/ZwEo4FuhRcsOwLl1y",
+      "authorship_tag": "ABX9TyMwmVFVQ9bCmHMHxW7FTpY9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -482,7 +482,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,12 +505,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# List Functions\n",
+        "my_list1 = ['a','b','c','d','e',1,2,3,4,5,[1.2,2.5]]\n",
+        "print('list:',my_list1)\n",
+        "\n",
+        "print('Length of List:',len(my_list1))\n",
+        "print('Type:',type(my_list1))\n",
+        "print('Item Type: ',type(my_list1[4]))\n",
+        "print('Item Type: ',type(my_list1[10]))\n",
+        "print('Item Type: ',type(my_list1[10][1]))\n",
+        "\n",
+        "my_list2=[10,45,12,74,45,36,15]\n",
+        "print('List2:',my_list2)\n",
+        "\n",
+        "print('Min:',min(my_list2))\n",
+        "print('Max:',max(my_list2))\n",
+        "print('Sorted ascending:',sorted(my_list2))\n",
+        "print('Sorted Decending:',sorted(my_list2,reverse=True))"
+      ],
       "metadata": {
-        "id": "81nYrm_bpfoz"
+        "id": "81nYrm_bpfoz",
+        "outputId": "d8551525-9796-41fb-d711-eb1f3a286064",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "list: ['a', 'b', 'c', 'd', 'e', 1, 2, 3, 4, 5, [1.2, 2.5]]\n",
+            "Length of List: 11\n",
+            "Type: <class 'list'>\n",
+            "Item Type:  <class 'str'>\n",
+            "Item Type:  <class 'list'>\n",
+            "Item Type:  <class 'float'>\n",
+            "List2: [10, 45, 12, 74, 45, 36, 15]\n",
+            "Min: 10\n",
+            "Max: 74\n",
+            "Sorted ascending: [10, 12, 15, 36, 45, 45, 74]\n",
+            "Sorted Decending: [74, 45, 45, 36, 15, 12, 10]\n"
+          ]
+        }
+      ]
     }
   ]
 }
