--- a/Py_DT_int_float_Boolean.ipynb
+++ b/Py_DT_int_float_Boolean.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJxbA56A5BpcRMDjK/dgmG",
+      "authorship_tag": "ABX9TyN017IajVPseup3K0aP972S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,8 +29,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Integers: (...-3,-2,-1,0,1,2,3) - Operations we can do with integers\n",
-        "* Denoted with 'int()'"
+        "1. **Integers:** (...-3,-2,-1,0,1,2,3...)\n",
+        "* Denoted with 'int()'\n",
+        "\n",
+        "2. **Float(Decimals):**(... -3.8, -1.6, 0.0, 1.0, 2.5 ...) \n",
+        "* Denoted with 'float()'\n"
       ],
       "metadata": {
         "id": "pk7lwkxpuYP4"
@@ -78,6 +81,102 @@
             "Multiply:  1800\n",
             "Direct Division:  3.5\n",
             "Floor Division:  3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Power: Instead of using 4^4 use 4**4\n",
+        "power = 4**4\n",
+        "print('power: ',power)\n",
+        "\n",
+        "#Modulus: it gives the remainder of the division. '%' do not confuse it with percentage sign\n",
+        "Modulus = 10%3\n",
+        "print('Modulus: ',Modulus)"
+      ],
+      "metadata": {
+        "id": "_Oeq4okWvJE-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Priority of Operation**\n",
+        "Left to Right, '()' High priority\n",
+        "Ex. \n",
+        " 2+(10*10)+3 = 105\n",
+        " 2+10*(10+3)= 132\n",
+        "\n",
+        "**Scientific Prepresentation of Numbers:**\n",
+        "\n",
+        "120000 = 1.2E5  i.e. (1.2x 10^5)\n",
+        "\n",
+        "2933.44 = 293344E-2"
+      ],
+      "metadata": {
+        "id": "mqUidtgBvNTE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. **Boolean Variable:** Comparison operator results in True (1) or False (0)\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   '==' Comparison Operation\n",
+        "*   '='  Assignment Operator\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   a == b (Equal to)\n",
+        "*   a != b (Not Equal to)\n",
+        "*   a <  b (Smaller than)\n",
+        "*   a >  b (Greater Than)\n",
+        "*   a >= b (Greater Than equal to)\n",
+        "*   a <= b (Smaller than equal to)\n",
+        "\n",
+        "The result of these operation must be either True or False"
+      ],
+      "metadata": {
+        "id": "P3QkVk4jvVu2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a , b = 25 , 36\n",
+        "\n",
+        "print(a==b)\n",
+        "print(a!=b)\n",
+        "print(a<b)\n",
+        "print(a>b)\n",
+        "print(a<=b)\n",
+        "print(a>=b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PwNg4uxBvXNm",
+        "outputId": "4fd36088-03f6-4b12-f4ca-dceb2744efb7"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n",
+            "True\n",
+            "False\n",
+            "True\n",
+            "False\n"
           ]
         }
       ]
