--- a/Py_List_Comprehension.ipynb
+++ b/Py_List_Comprehension.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNv/kr9x8zMe55NyYiFwUJf",
+      "authorship_tag": "ABX9TyMaH73ec0HVEWdQnPGgGWGG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "id": "gtnlAU_J2_0N",
         "outputId": "c1db93e1-a4a7-4f63-81c6-6728feaed47d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "id": "2XWS1Xlb451V",
         "outputId": "77e6eb2e-4036-4d75-f431-1a0b0845c3b8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
         "id": "e1ENQ5Ub-cpD",
         "outputId": "e6070096-436c-4e31-8919-4f5051a4e7fa"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,7 +243,7 @@
         "id": "XBRqUxSxAcXs",
         "outputId": "abbd7eb3-6f53-4708-ced1-025dacf6856c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +267,24 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Normal Method\n",
+        "NumList = [1,2,4,6,11,14,17,20,23,29,30]\n",
+        "num = []\n",
+        "\n",
+        "for i in NumList:\n",
+        "  if i%2 ==0:\n",
+        "    num.append(2)\n",
+        "  elif i%3 == 0:\n",
+        "    num.append(3)\n",
+        "  else:\n",
+        "    num.append(i)\n",
+        "print(num)\n",
+        "\n",
+        "#by List Comprehension\n",
+        "num=[2 if i%2==0 else 3 if i%3==0 else i for i in NumList]\n",
+        "print(num)"
+      ],
       "metadata": {
         "id": "IEaEMhXyDAiC"
       },
